[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "post-release"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.sdist]
include = [
    "gitmodules/partmc/COPYING",
    "gitmodules/partmc/src",
    "gitmodules/partmc/src/condense_solver.c",
    "gitmodules/camp/COPYING",
    "gitmodules/camp/CMakeLists.txt",
    "gitmodules/camp/src",
    "gitmodules/json-fortran/LICENSE",
    "gitmodules/json-fortran/src",
    "gitmodules/SuiteSparse/LICENSE.txt",
    "gitmodules/SuiteSparse/KLU/Source",
    "gitmodules/SuiteSparse/KLU/Include",
    "gitmodules/SuiteSparse/COLAMD/Source",
    "gitmodules/SuiteSparse/COLAMD/Include",
    "gitmodules/SuiteSparse/AMD/Source",
    "gitmodules/SuiteSparse/AMD/Include",
    "gitmodules/SuiteSparse/BTF/Source",
    "gitmodules/SuiteSparse/BTF/Include",
    "gitmodules/SuiteSparse/SuiteSparse_config/SuiteSparse_config.c",
    "gitmodules/SuiteSparse/SuiteSparse_config/SuiteSparse_config.h",
    "gitmodules/sundials/LICENSE",
    "gitmodules/sundials/CMakeLists.txt",
    "gitmodules/sundials/src/sunnonlinsol/newton",
    "gitmodules/sundials/src/sunnonlinsol/fixedpoint",
    "gitmodules/sundials/src/nvector/serial",
    "gitmodules/sundials/src/sunlinsol/band",
    "gitmodules/sundials/src/sunlinsol/dense",
    "gitmodules/sundials/src/sunlinsol/klu",
    "gitmodules/sundials/src/cvode",
    "gitmodules/sundials/src/sundials",
    "gitmodules/sundials/include/cvode",
    "gitmodules/sundials/include/sundials",
    "gitmodules/sundials/include/sunnonlinsol",
    "gitmodules/sundials/include/sunmatrix",
    "gitmodules/sundials/include/sunlinsol",
    "gitmodules/sundials/include/nvector",
    "gitmodules/sundials/cmake/SundialsSetupConfig.cmake",
    "gitmodules/sundials/cmake/SundialsSetupCompilers.cmake",
    "gitmodules/sundials/cmake/SundialsIndexSize.cmake",
    "gitmodules/sundials/src/sunmatrix/CMakeLists.txt",
    "gitmodules/sundials/src/sunmatrix/band/CMakeLists.txt",
    "gitmodules/sundials/src/sunmatrix/dense/CMakeLists.txt",
    "gitmodules/sundials/src/sunmatrix/sparse/CMakeLists.txt",
    "gitmodules/sundials/src/sunlinsol/CMakeLists.txt",
    "gitmodules/sundials/src/sunlinsol/pcg/CMakeLists.txt",
    "gitmodules/sundials/src/sunlinsol/spbcgs/CMakeLists.txt",
    "gitmodules/sundials/src/sunlinsol/spfgmr/CMakeLists.txt",
    "gitmodules/sundials/src/sunlinsol/spgmr/CMakeLists.txt",
    "gitmodules/sundials/src/sunlinsol/sptfqmr/CMakeLists.txt",
    "gitmodules/sundials/src/sunnonlinsol/CMakeLists.txt",
    "gitmodules/sundials/src/nvector/CMakeLists.txt",
    "gitmodules/sundials/src/sunmatrix/band/sunmatrix_band.c",
    "gitmodules/sundials/src/sunmatrix/dense/sunmatrix_dense.c",
    "gitmodules/sundials/src/sunmatrix/sparse/sunmatrix_sparse.c",
    "gitmodules/sundials/src/sunmatrix/band/sunmatrix_band.c",
    "gitmodules/sundials/src/sunmatrix/dense/sunmatrix_dense.c",
    "gitmodules/sundials/src/sunlinsol/pcg/sunlinsol_pcg.c",
    "gitmodules/sundials/src/sunlinsol/spbcgs/sunlinsol_spbcgs.c",
    "gitmodules/sundials/src/sunlinsol/spfgmr/sunlinsol_spfgmr.c",
    "gitmodules/sundials/src/sunlinsol/spgmr/sunlinsol_spgmr.c",
    "gitmodules/sundials/src/sunlinsol/sptfqmr/sunlinsol_sptfqmr.c",
    "gitmodules/json/LICENSE.MIT",
    "gitmodules/json/include/nlohmann",
    "gitmodules/span/LICENSE_1_0.txt",
    "gitmodules/span/include/tcb/span.hpp",
    "gitmodules/string_view-standalone/LICENSE",
    "gitmodules/string_view-standalone/include/bpstd",
    "gitmodules/optional/include/tl/optional.hpp",
    "gitmodules/optional/COPYING",
    "gitmodules/netcdf-c/COPYRIGHT",
    "gitmodules/netcdf-c/CMakeLists.txt",
    "gitmodules/netcdf-c/config.h.cmake.in",
    "gitmodules/netcdf-c/include/netcdf.h",
    "gitmodules/netcdf-c/include/onstack.h",
    "gitmodules/netcdf-c/include/netcdf_dispatch.h.in",
    "gitmodules/netcdf-c/include/ncconfigure.h",
    "gitmodules/netcdf-c/include/netcdf_meta.h.in",
    "gitmodules/netcdf-c/include/ncdispatch.h",
    "gitmodules/netcdf-c/include/ncmodel.h",
    "gitmodules/netcdf-c/include/nc.h",
    "gitmodules/netcdf-c/include/ncuri.h",
    "gitmodules/netcdf-c/include/ncexternl.h",
    "gitmodules/netcdf-c/include/nc4internal.h",
    "gitmodules/netcdf-c/include/nc_logging.h",
    "gitmodules/netcdf-c/include/ncindex.h",
    "gitmodules/netcdf-c/include/nclist.h",
    "gitmodules/netcdf-c/include/nchashmap.h",
    "gitmodules/netcdf-c/include/nc_provenance.h",
    "gitmodules/netcdf-c/include/netcdf_f.h",
    "gitmodules/netcdf-c/include/nclog.h",
    "gitmodules/netcdf-c/include/ncbytes.h",
    "gitmodules/netcdf-c/include/ncrc.h",
    "gitmodules/netcdf-c/include/ncoffsets.h",
    "gitmodules/netcdf-c/include/ncpathmgr.h",
    "gitmodules/netcdf-c/include/ncxml.h",
    "gitmodules/netcdf-c/include/fbits.h",
    "gitmodules/netcdf-c/include/rnd.h",
    "gitmodules/netcdf-c/include/ncutf8.h",
    "gitmodules/netcdf-c/include/nccrc.h",
    "gitmodules/netcdf-c/include/nc3internal.h",
    "gitmodules/netcdf-c/include/nc3dispatch.h",
    "gitmodules/netcdf-c/include/nc4dispatch.h",
    "gitmodules/netcdf-c/include/ncs3sdk.h",
    "gitmodules/netcdf-c/include/ncauth.h",
    "gitmodules/netcdf-c/include/nchttp.h",
    "gitmodules/netcdf-c/include/netcdf_mem.h",
    "gitmodules/netcdf-c/include/netcdf_filter.h",
    "gitmodules/netcdf-c/include/netcdf_aux.h",
    "gitmodules/netcdf-c/include/hdf5internal.h",
    "gitmodules/netcdf-c/include/hdf5dispatch.h",
    "gitmodules/netcdf-c/include/ncdimscale.h",
    "gitmodules/netcdf-c/libdispatch/utf8proc_data.c",
    "gitmodules/netcdf-c/libdispatch/utf8proc.h",
    "gitmodules/netcdf-c/libdispatch/dvar.c",
    "gitmodules/netcdf-c/libdispatch/ddim.c",
    "gitmodules/netcdf-c/libdispatch/dvarput.c",
    "gitmodules/netcdf-c/libdispatch/dvarget.c",
    "gitmodules/netcdf-c/libdispatch/ddispatch.c",
    "gitmodules/netcdf-c/libdispatch/dcompound.c",
    "gitmodules/netcdf-c/libdispatch/denum.c",
    "gitmodules/netcdf-c/libdispatch/daux.c",
    "gitmodules/netcdf-c/libdispatch/dvlen.c",
    "gitmodules/netcdf-c/libdispatch/nc.c",
    "gitmodules/netcdf-c/libdispatch/dfile.c",
    "gitmodules/netcdf-c/libdispatch/dnotnc4.c",
    "gitmodules/netcdf-c/libdispatch/dstring.c",
    "gitmodules/netcdf-c/libdispatch/nclist.c",
    "gitmodules/netcdf-c/libdispatch/nchashmap.c",
    "gitmodules/netcdf-c/libdispatch/dinstance_intern.c",
    "gitmodules/netcdf-c/libdispatch/dtype.c",
    "gitmodules/netcdf-c/libdispatch/dgroup.c",
    "gitmodules/netcdf-c/libdispatch/nclistmgr.c",
    "gitmodules/netcdf-c/libdispatch/dattget.c",
    "gitmodules/netcdf-c/libdispatch/dattinq.c",
    "gitmodules/netcdf-c/libdispatch/dvarinq.c",
    "gitmodules/netcdf-c/libdispatch/dfilter.c",
    "gitmodules/netcdf-c/libdispatch/derror.c",
    "gitmodules/netcdf-c/libdispatch/doffsets.c",
    "gitmodules/netcdf-c/libdispatch/datt.c",
    "gitmodules/netcdf-c/libdispatch/dattput.c",
    "gitmodules/netcdf-c/libdispatch/dcopy.c",
    "gitmodules/netcdf-c/libdispatch/drc.c",
    "gitmodules/netcdf-c/libdispatch/dpathmgr.c",
    "gitmodules/netcdf-c/libdispatch/dmissing.c",
    "gitmodules/netcdf-c/libdispatch/nclog.c",
    "gitmodules/netcdf-c/libdispatch/dutf8.c",
    "gitmodules/netcdf-c/libdispatch/utf8proc.c",
    "gitmodules/netcdf-c/libdispatch/ncbytes.c",
    "gitmodules/netcdf-c/libdispatch/dopaque.c",
    "gitmodules/netcdf-c/libdispatch/ncuri.c",
    "gitmodules/netcdf-c/libdispatch/dcrc64.c",
    "gitmodules/netcdf-c/libdispatch/dinstance.c",
    "gitmodules/netcdf-c/libdispatch/ds3util.c",
    "gitmodules/netcdf-c/libdispatch/dutil.c",
    "gitmodules/netcdf-c/libdispatch/dauth.c",
    "gitmodules/netcdf-c/libdispatch/dinfermodel.c",
    "gitmodules/netcdf-c/liblib/nc_initialize.c",
    "gitmodules/netcdf-c/libsrc/ncx.h",
    "gitmodules/netcdf-c/libsrc/ncio.h",
    "gitmodules/netcdf-c/libsrc/putget.m4",
    "gitmodules/netcdf-c/libsrc/ncx.m4",
    "gitmodules/netcdf-c/libsrc/attr.m4",
    "gitmodules/netcdf-c/libsrc/nc3dispatch.c",
    "gitmodules/netcdf-c/libsrc/nc3internal.c",
    "gitmodules/netcdf-c/libsrc/dim.c",
    "gitmodules/netcdf-c/libsrc/var.c",
    "gitmodules/netcdf-c/libsrc/ncio.c",
    "gitmodules/netcdf-c/libsrc/v1hpg.c",
    "gitmodules/netcdf-c/libsrc/memio.c",
    "gitmodules/netcdf-c/libsrc/posixio.c",
    "gitmodules/netcdf-c/libsrc4/nc4internal.c",
    "gitmodules/netcdf-c/libsrc4/ncindex.c",
    "gitmodules/netcdf-c/libsrc4/nc4cache.c",
    "gitmodules/netcdf-c/libsrc4/nc4dispatch.c",
    "gitmodules/netcdf-c/libsrc4/nc4type.c",
    "gitmodules/netcdf-c/libsrc4/nc4grp.c",
    "gitmodules/netcdf-c/libsrc4/nc4var.c",
    "gitmodules/netcdf-c/libsrc4/nc4dim.c",
    "gitmodules/netcdf-c/libsrc4/nc4attr.c",
    "gitmodules/netcdf-c/libsrc4/nc4filters.c",
    "gitmodules/netcdf-c/libsrc4/ncfunc.c",
    "gitmodules/netcdf-c/libhdf5",
    "gitmodules/netcdf-fortran/COPYRIGHT",
    "gitmodules/netcdf-fortran/CMakeExtras/MatchNetCDFFortranTypes.cmake",
    "gitmodules/netcdf-fortran/fortran/typeSizes.F90",
    "gitmodules/netcdf-fortran/fortran/module_netcdf_nf_data.F90",
    "gitmodules/netcdf-fortran/fortran/module_netcdf_nc_data.F90",
    "gitmodules/netcdf-fortran/fortran/module_netcdf_nf_interfaces.F90",
    "gitmodules/netcdf-fortran/fortran/module_netcdf_nc_interfaces.F90",
    "gitmodules/netcdf-fortran/fortran/module_netcdf4_nf_interfaces.F90",
    "gitmodules/netcdf-fortran/fortran/module_netcdf4_nc_interfaces.F90",
    "gitmodules/netcdf-fortran/fortran/nf_nc4.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf4.F90",
    "gitmodules/netcdf-fortran/fortran/nf_varaio.F90",
    "gitmodules/netcdf-fortran/fortran/nf_varsio.F90",
    "gitmodules/netcdf-fortran/fortran/nf_varmio.F90",
    "gitmodules/netcdf-fortran/fortran/nf_var1io.F90",
    "gitmodules/netcdf-fortran/fortran/nf_attio.F90",
    "gitmodules/netcdf-fortran/fortran/nf_control.F90",
    "gitmodules/netcdf-fortran/fortran/nf_genvar.F90",
    "gitmodules/netcdf-fortran/fortran/nf_dim.F90",
    "gitmodules/netcdf-fortran/fortran/nf_misc.F90",
    "gitmodules/netcdf-fortran/fortran/nf_nc_noparallel.F90",
    "gitmodules/netcdf-fortran/fortran/nf_lib.c",
    "gitmodules/netcdf-fortran/fortran/nf_genatt.F90",
    "gitmodules/netcdf-fortran/fortran/nf_geninq.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf_externals.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf_constants.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf4_externals.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf_overloads.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf4_overloads.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf_visibility.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf4_visibility.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf_file.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf4_file.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf_dims.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf_attributes.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf_variables.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf4_variables.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf_text_variables.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf_expanded.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf4_eightbyte.F90",
    "gitmodules/netcdf-fortran/fortran/netcdf4_func.F90",
    "gitmodules/hdf5/COPYING",
    "gitmodules/hdf5/CMakeLists.txt",
    "gitmodules/hdf5/*.cmake",
    "gitmodules/hdf5/src",
    "gitmodules/hdf5/bin",
    "gitmodules/hdf5/config",
    "gitmodules/hdf5/hl/CMakeLists.txt",
    "gitmodules/hdf5/hl/src",
    "gitmodules/nanobind/",
    "gitmodules/nanobind_json/"
]
exclude = [
    "examples/", # jupyter execution logic requires rw accesss
    "build/**",
    "dist/**",
    "**/__pycache__/**",
    "*.pyc",
    "readme_fortran/",
    ".*",
    "gitmodules/"
]

[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "setuptools-scm==8.3.1"]
build-backend = "scikit_build_core.build"

[project]
name = "PyPartMC"
dynamic = ["version"]
description = "Python interface to PartMC"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "https://github.com/open-atmos/PyPartMC/graphs/contributors", email = "nriemer@illinois.edu"}
]
license = "GPL-3.0"
dependencies = [
    "numpy",
    "nanobind"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-order",
]
examples = [
    "matplotlib != 3.10.0",
    "ipywidgets",
    "voila",
    "open-atmos-jupyter-utils",
    "PySDM",
    "PyMieScatt",
    "SciPy",
    "dustpy; platform_system != 'Windows'"
]

[project.urls]
Documentation = "https://open-atmos.github.io/PyPartMC"
Source = "https://github.com/open-atmos/PyPartMC/"
Tracker = "https://github.com/open-atmos/PyPartMC/issues"
